<resources>

    <string name="app_name">eTalk</string>
    <string name="app_processing">Processing…</string>
    <string name="app_no_connection">No connection</string>
    <string name="app_request_timeout">Request Timeout.\n Check connection and try again.</string>
    <string name="app_first_message">Hello!</string>
    <string name="app_image">[Picture]</string>
    <string name="app_sound">[Record]</string>
    <string name="app_video">[Video]</string>
    <string name="app_file">[File]</string>
    <string name="app_map">[Location]</string>
    <string name="app_time_day">day</string>
    <string name="app_time_days">days</string>
    <string name="app_time_hour">hour</string>
    <string name="app_time_hours">hours</string>
    <string name="app_time_minute">minute</string>
    <string name="app_time_minutes">minutes</string>
    <string name="app_members">members</string>
    <string name="app_online">Online</string>
    <string name="app_offline">Offline</string>
    <string name="app_back_press">Tap again to exit</string>

    <!--Welcome activity-->
    <string name="welcome_activity_btn_login">LOGIN</string>
    <string name="welcome_activity_btn_register">REGISTER</string>

    <!--Login activity-->
    <string name="login_activity_txt_title">Login</string>
    <string name="login_activity_txt_input_hint">Enter username and password to login</string>
    <string name="login_activity_txt_username_hint">Enter username</string>
    <string name="login_activity_txt_password_hint">Enter password</string>
    <string name="login_activity_btn_login">LOGIN</string>
    <string name="login_activity_login_failed">Invalid login credentials.\n Please double-check and try again.</string>

    <!--Register activity-->
    <string name="register_activity_txt_title">Register</string>
    <string name="register_activity_txt_input_hint">Enter full information to register</string>
    <string name="register_activity_txt_name_hint">Enter full name</string>
    <string name="register_activity_txt_username_hint">Enter username</string>
    <string name="register_activity_txt_password_hint">Enter password</string>
    <string name="register_activity_txt_phone_hint">Enter phone number</string>
    <string name="register_activity_btn_login">REGISTER</string>
    <string name="register_activity_register_failed">The username or phone number is already in use\nby another account</string>

    <!--Content activity-->
    <string name="content_activity_edt_search">Search friends, messages…</string>
    <string name="content_activity_tab_messages">Messages</string>
    <string name="content_activity_tab_contacts">Contacts</string>
    <string name="content_activity_tab_groups">Groups</string>
    <string name="content_activity_tab_timeline">Timeline</string>
    <string name="content_activity_tab_more">More</string>
    <string name="content_activity_menu_create_group">Create group</string>
    <string name="content_activity_menu_add_friend">Add friend</string>
    <string name="content_activity_menu_scan_qr_code">Scan QR Code</string>
    <string name="content_activity_menu_etalk_for_desktop">eTalk for Desktop</string>
    <string name="content_activity_menu_etalk_calendar">eTalk Calender</string>
    <string name="content_activity_menu_logout">Log out</string>

    <!--Contact fragment-->
    <string name="contact_fragment_txt_title">All contacts</string>

    <!--Group fragment-->
    <string name="group_fragment_txt_title">Joined groups</string>

    <!--More fragment-->
    <string name="more_fragment_btn_profile">My profile</string>
    <string name="more_fragment_btn_nearby">People nearby</string>
    <string name="more_fragment_btn_chat_rooms">Chat rooms</string>
    <string name="more_fragment_btn_shop">Shop</string>
    <string name="more_fragment_btn_game">Game</string>
    <string name="more_fragment_btn_channel">Channel</string>
    <string name="more_fragment_btn_taxi">Taxi</string>
    <string name="more_fragment_btn_logout">Logout</string>

    <!--Chat activity-->
    <string name="chat_activity_edt_message">Message</string>
    <string name="chat_activity_media_title">Media</string>
    <string name="chat_activity_media_take_photo">Take photo</string>
    <string name="chat_activity_media_record">Record</string>
    <string name="chat_activity_media_record_hint">Press and hold to record</string>
    <string name="chat_activity_media_recording_hint">Release to complete recording</string>
    <string name="chat_activity_media_recorded_hint">Press and hold to record again</string>
    <string name="chat_activity_media_recorded_too_short">Too short</string>
    <string name="chat_activity_media_choose_photos">Choose existing photos</string>
    <string name="chat_activity_media_choose_video">Choose existing videos</string>
    <string name="chat_activity_download_ok">File saved in\ </string>
    <string name="chat_activity_download_failed">Download failed</string>
    <string name="chat_activity_menu_send_location">Share location</string>
    <string name="chat_activity_menu_send_contact">Send contact</string>

    <!--Profile activity-->
    <string name="profile_activity_txt_title">Edit profile</string>
    <string name="profile_activity_btn_update">UPDATE</string>
    <string name="profile_activity_image_option_title">Update avatar</string>
    <string name="profile_activity_image_option_camera">Take photo</string>
    <string name="profile_activity_image_option_library">Choose existing photos</string>
    <string name="profile_activity_request_timeout">Request timeout</string>
    <string name="profile_activity_update_successfully">Update successfully</string>
    <string name="profile_activity_update_failed">Update failed!\n Check connection again.</string>

    <!--Add friend activity-->
    <string name="add_friend_activity_txt_title">Add friend</string>
    <string name="add_friend_activity_txt_input_hint">Add friend by phone number</string>
    <string name="add_friend_activity_edt_phone_hint">Enter your phone number</string>
    <string name="add_friend_activity_btn_search">SEARCH</string>
    <string name="add_friend_activity_btn_add">ADD</string>
    <string name="add_friend_activity_btn_added">ADDED</string>
    <string name="add_friend_activity_notification_title">Notification</string>
    <string name="add_friend_activity_notification_content">This number has not been a registered eTalk account. Invite to join eTalk?</string>
    <string name="add_friend_activity_notification_positive">YES</string>
    <string name="add_friend_activity_notification_negative">NO</string>
    <string name="add_friend_activity_sms_invitation">invited you to install eTalk.</string>

    <!--Create group activity-->
    <string name="create_group_activity_txt_title">New Group</string>
    <string name="create_group_activity_btn_create">Create</string>
    <string name="create_group_activity_edt_name_hint">Set group name</string>
    <string name="create_group_activity_txt_member_title">Select members</string>
    <string name="create_group_activity_create_failed">Create failed</string>

</resources>
