<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.content.pager_page.more.MoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_profile"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_profile"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_nearby"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_nearby"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="80dp"
                android:layout_gravity="bottom"
                android:background="@color/colorLightGray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_chat_room"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_chat_rooms"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="80dp"
                android:layout_gravity="bottom"
                android:background="@color/colorLightGray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_shop"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_shop"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="80dp"
                android:layout_gravity="bottom"
                android:background="@color/colorLightGray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_game"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_game"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="80dp"
                android:layout_gravity="bottom"
                android:background="@color/colorLightGray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_channel"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_channel"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="80dp"
                android:layout_gravity="bottom"
                android:background="@color/colorLightGray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_taxi"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_taxi"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_tab_more">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_logout"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical"
                android:text="@string/more_fragment_btn_logout"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"/>
        </FrameLayout>
    </LinearLayout>

</ScrollView>